err/virtualchain.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/keylib'...
Listing './lib/python3.5/site-packages/keylib-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protocoin'...
Listing './lib/python3.5/site-packages/protocoin-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/utilitybelt'...
Listing './lib/python3.5/site-packages/utilitybelt-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/virtualchain'...
Listing './lib/python3.5/site-packages/virtualchain/impl_ref'...
Compiling './lib/python3.5/site-packages/virtualchain/impl_ref/reference.py'...
***   File "./lib/python3.5/site-packages/virtualchain/impl_ref/reference.py", line 31
    print "\nreference implementation of get_virtual_chain_name\n"
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/virtualchain/lib'...
Listing './lib/python3.5/site-packages/virtualchain/lib/blockchain'...
Listing './lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain'...
Compiling './lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/bits.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/bits.py", line 472
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/blocks.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/blocks.py", line 89
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/multisig.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/multisig.py", line 241
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/spv.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/blockchain/bitcoin_blockchain/spv.py", line 233
    except socket.error, se:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/lib/blockchain/transactions.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/blockchain/transactions.py", line 95
    except SystemExit, s:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/lib/indexer.py'...
***   File "./lib/python3.5/site-packages/virtualchain/lib/indexer.py", line 183
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtualchain/virtualchain.py'...
***   File "./lib/python3.5/site-packages/virtualchain/virtualchain.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtualchain-0.17.0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
